fix(typography): restore vertical spacing between paragraphs and list items in case sections

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -53,7 +53,7 @@
         .case-metrics h3 { margin: 0 0 var(--space-20); }
         .metrics-left { grid-column: span 6; }
         .metrics-right { grid-column: span 5 / -1; }
-        .metrics-left p { margin: 0 0 var(--space-0); }
+        .metrics-left p { margin: 0 0 var(--space-12); }
         .metrics-list { display: grid; gap: var(--space-24); }
         .metrics-item h2 { color: var(--text-accent); margin: 0 0 var(--space-0); }
         .metrics-item p { margin: 0; }
@@ -243,15 +243,15 @@
             <div class="container">
                 <div class="metrics-left">
                     <h3 class="text-heading-3">The problem, in detail</h3>
-                    <p class="text-body-base"><span style="font-weight: 700;">Problem 1:</span> Communication for a property booking between guests, owners, and frontline teams happened in silos, leaving each party without visibility into the others’ interactions. Nearly half of bookings required manual intervention, with many guest requests still needing owner approval. This created gaps that prevented Evolve from delivering a seamless experience.  <span style="color: var(--color-fire-500);">How  we give guests direct access to owners when needed—without delays or bottlenecks?</span></p>
+                    <p class="text-body-base"><span style="font-weight: 700;">Problem 1:</span> Communication for a property booking between guests, owners, and frontline teams happened in silos, leaving each party without visibility into the others’ interactions. Nearly half of bookings required manual intervention, with many guest requests still needing owner approval. This created gaps that prevented Evolve from delivering a seamless experience.  <span style="color: var(--color-fire-500);">How could we give guests direct access to owners when needed and allow owners to address booking requests on their own—without delays or bottlenecks?</span></p>
                     <p class="text-body-base"><span style="font-weight: 700;">Problem 2:</span> Owners had varying expectations of how hands-on Evolve would be in managing guests and bookings. In reality, owners could never be fully removed—certain requests and issues always required their approval, and their engagement was critical to rental success.<span style="color: var(--color-fire-500);">How could we reframe success so that owners see engagement as essential, not optional, to their rental’s performance?</span></p>
-                    <p class="text-body-base">I needed to solve for three distinct users—Owners, Guests, and Evolve teams—each with unique needs:</p>
+                    <p class="text-body-base">I needed to solve for three distinct users—Owners, Guests, and frontline teams—each with unique needs:</p>
                     <ul>
-                        <li class="text-body-base"><span class="text-body-base-bold">Owners:</span> Needed visibility into all guest interactions, without relying on off-platform tools</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Guests:</span> Expected quick, familiar, friction-free communication, like what they’re used to with messaging apps and other vacation rental platforms</li>
-                        <li class="text-body-base"><span class="text-body-base-bold">Evolve:</span> Needed transparency into owner–guest communication to reduce duplicate work and service costs</li>
+                        <li class="text-body-base" style="margin-bottom: var(--space-8);"><span class="text-body-base-bold">Owners:</span> Needed visibility into all guest interactions, without relying on off-platform tools</li>
+                        <li class="text-body-base" style="margin-bottom: var(--space-8);"><span class="text-body-base-bold">Guests:</span> Expected quick, familiar, friction-free communication, like what they’re used to with messaging apps and other vacation rental platforms</li>
+                        <li class="text-body-base"><span class="text-body-base-bold">Frontline teams:</span> Needed transparency into owner–guest communication to reduce duplicate work and service costs</li>
                     </ul>
-                    <p class="text-body-base">I knew I couldn’t just build a communication tool without educating the user how to engage with guests, which would ultimately lead to higher rental performance.</p>
+                    <p class="text-body-base">I knew I couldn’t just build a communication tool without educating the user how to engage with guests and manage booking requests on their own, which would ultimately lead to higher rental performance.</p>
                 </div>
                 <div class="metrics-right">
                     <div class="metrics-list">
