style(captions): align caption-to-image gap with metrics images (margin-bottom var(--space-12))

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -84,7 +84,7 @@
         @media (max-width: 1024px) { #empathy-storming .container { margin: 0 var(--space-40); } }
         @media (max-width: 640px) { #empathy-storming .container { margin: 0 var(--space-40); } }
         .metrics-image, .discovery-image, .solution-image{ margin: 0 0 var(--space-48); }
-        .metrics-caption, .discovery-caption, .solution-caption{ text-align: center; color: var(--color-grey); margin: 0; }
+        .metrics-caption, .discovery-caption, .solution-caption{ text-align: center; color: var(--color-grey); margin: 0 0 var(--space-12); }
         .metrics-placeholder, .discovery-placeholder, .solution-placeholder{ width: 100%; background: var(--color-grey); border-radius: 16px; }
         /* Let images define height based on width for all image sections */
         .metrics-placeholder, .discovery-placeholder, .solution-placeholder { height: auto; background: transparent; }
