--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -71,13 +71,14 @@
         .discovery-media .container { max-width: 1920px; margin: 0 80px; }
         /* Carousel */
         .carousel { position: relative; overflow: hidden; }
-        .carousel-track { display: flex; gap: var(--space-20); scroll-snap-type: x mandatory; overflow-x: auto; padding-bottom: var(--space-12); }
+        .carousel-track { display: flex; gap: 0; scroll-snap-type: x mandatory; overflow-x: auto; padding-bottom: var(--space-12); }
         .carousel-slide { min-width: 100%; scroll-snap-align: start; }
         .carousel-caption { text-align: center; color: var(--color-grey); margin: 0 0 var(--space-12); }
-        .carousel-media { width: 100%; background: var(--color-grey); border-radius: 16px; }
-        .carousel-media img { width: 100%; height: auto; display: block; border-radius: 16px; }
-        .carousel-nav { position: absolute; inset: 0; display: flex; justify-content: space-between; align-items: center; pointer-events: none; }
-        .carousel-btn { pointer-events: all; background: rgba(0,0,0,0.4); color: #fff; border: 0; width: 40px; height: 40px; border-radius: 999px; display: grid; place-items: center; cursor: pointer; }
+        .carousel-media { width: 100%; height: 680px; background: var(--color-grey); border-radius: 16px; display: grid; place-items: center; overflow: hidden; position: relative; }
+        .carousel-media img { height: 680px; width: auto; max-width: 100%; display: block; border-radius: 16px; object-fit: contain; }
+        .carousel-nav { position: absolute; top: calc(50% + var(--space-12)); left: 0; right: 0; transform: translateY(-50%); display: flex; justify-content: space-between; align-items: center; pointer-events: none; padding: 0 var(--space-20); }
+        .carousel-btn { pointer-events: all; background: transparent; color: var(--color-fire-500); border: 0; width: 48px; height: 48px; display: grid; place-items: center; cursor: pointer; font-size: 48px; line-height: 1; }
+        @media (max-width: 640px) { .carousel-btn { font-size: 36px; width: 36px; height: 36px; } }
         @media (max-width: 1024px) { .discovery-media .container { margin: 0; } }
         @media (max-width: 640px) { .discovery-media .container { margin: 0; } }
 
