--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -74,7 +74,7 @@
         .carousel-track { display: flex; gap: 0; scroll-snap-type: x mandatory; overflow-x: auto; padding-bottom: var(--space-12); }
         .carousel-slide { min-width: 100%; scroll-snap-align: start; }
         .carousel-caption { text-align: center; color: var(--color-grey); margin: 0 0 var(--space-12); }
-        .carousel-media { width: 100%; height: 680px; background: var(--color-grey); border-radius: 16px; display: grid; place-items: center; overflow: hidden; position: relative; }
+        .carousel-media { width: 100%; height: 680px; background: var(--color-white); border-radius: 16px; display: grid; place-items: center; overflow: hidden; position: relative; }
         .carousel-media img { height: 680px; width: auto; max-width: 100%; display: block; border-radius: 16px; object-fit: contain; }
         .carousel-nav { position: absolute; top: calc(50% + var(--space-12)); left: 0; right: 0; transform: translateY(-50%); display: flex; justify-content: space-between; align-items: center; pointer-events: none; padding: 0 var(--space-20); }
         .carousel-btn { pointer-events: all; background: transparent; color: var(--color-fire-500); border: 0; width: 48px; height: 48px; display: grid; place-items: center; cursor: pointer; font-size: 48px; line-height: 1; }
@@ -354,21 +354,21 @@
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <p class="text-body-base-bold carousel-caption">Owner survey results overview</p>
+                            <p class="text-body-base-bold carousel-caption">Owner survey results</p>
                             <div class="carousel-media">
                                 <img src="assets/evolve_inbox_survey.svg" alt="Owner survey results" />
                             </div>
                         </div>
                         <div class="carousel-slide">
-                            <p class="text-body-base-bold carousel-caption">Inbound message timing by booking phase</p>
+                            <p class="text-body-base-bold carousel-caption">Inbound messaging by booking phase</p>
                             <div class="carousel-media">
                                 <img src="assets/evolve_inbox_bookingphase.svg" alt="Booking phase timing" />
                             </div>
                         </div>
                     </div>
                     <div class="carousel-nav">
-                        <button class="carousel-btn" data-dir="prev" aria-label="Previous">‹</button>
-                        <button class="carousel-btn" data-dir="next" aria-label="Next">›</button>
+                        <button class="carousel-btn" data-dir="prev" aria-label="Previous"><img src="assets/arrow-left.svg" alt="Previous" width="48" height="48" /></button>
+                        <button class="carousel-btn" data-dir="next" aria-label="Next"><img src="assets/arrow-right.svg" alt="Next" width="48" height="48" /></button>
                     </div>
                 </div>
             </div>
