--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -71,7 +71,8 @@
         .discovery-media .container { max-width: 1920px; margin: 0 80px; }
         /* Carousel */
         .carousel { position: relative; overflow: hidden; }
-        .carousel-track { display: flex; gap: 0; scroll-snap-type: x mandatory; overflow-x: auto; padding-bottom: var(--space-12); }
+        .carousel-track { display: flex; gap: 0; scroll-snap-type: x mandatory; overflow-x: auto; padding-bottom: var(--space-12); scrollbar-width: none; -ms-overflow-style: none; overscroll-behavior-x: contain; }
+        .carousel-track::-webkit-scrollbar { display: none; }
         .carousel-slide { min-width: 100%; scroll-snap-align: start; }
         .carousel-caption { text-align: center; color: var(--color-grey); margin: 0 0 var(--space-12); }
         .carousel-media { width: 100%; height: 680px; background: var(--color-white); border-radius: 16px; display: grid; place-items: center; overflow: hidden; position: relative; }
