--- a/about.html
+++ b/about.html
@@ -52,8 +52,8 @@
         <section class="hero">
             <div class="hero-grid container">
                 <div class="hero-content">
-                    <h1 class="text-heading-1">Hey! Hi!</h1>
-                    <p class="text-body-lg">Ok, ok—there’s already a little About section on the homepage, but here’s a bit more 🤓</p>
+                    <h1 class="text-heading-1">Hey!</h1>
+                    <p class="text-body-lg">All right—there’s already a little About section on the homepage, but here’s a bit more 🤓</p>
                     <p class="text-body-lg">I’m a designer who loves creating things that bring both me and my community joy. I enjoy technical problem-solving as much as creative exploration, so lately I’ve been dabbling in AI-powered code editors. I’m also the type who reads every plaque in a museum (yes, every single one).</p>
                     <p class="text-body-lg">Based in Colorado, I split my time between screens and trails—you’ll usually find me climbing, hiking, or biking.</p>
                 </div>
